# opencode-agent-sdk-python

./: .gitignore  CLAUDE.md  Dockerfile.opencode  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: hooks_example.py  quick_start.py
scripts/: chat.py  claude_sdk_demo.py  demo.py  docker-entrypoint.sh  e2e_test.py  opencode_ai_demo.py  opencode_sdk_demo.py  test_sdk_docker.py
src/opencode_agent_sdk/: __init__.py  _errors.py  _mcp_bridge.py  claude.py  client.py  common.py  model_registry.py  opencode.py  tools.py  types.py
src/opencode_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/opencode_agent_sdk/_internal/: acp.py  http_transport.py  transport.py
src/opencode_agent_sdk/backends/: __init__.py  base.py  claude_backend.py  opencode_backend.py
src/seamless_switch/: claude.py  common.py  opencode.py  runner.py
src/seamless_switch/backends/: claude_backend.py  opencode_backend.py
tests/: test_common.py  test_model_registry.py  test_opencode_agent.py  test_runner.py  test_types.py
